--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </mav>
+        </nav>
     </header>
 
     <img class="coverPhoto" src="assets/images/digital-marketing-meeting.jpg" alt="hero team cover photo">
