--- a/index.html
+++ b/index.html
@@ -1,83 +1,83 @@
-<!DOCTYPE html>
-<html lang="en-us">
+<!DOCTYPE html> <!-- Tells the browser what kind of document this is, html -->
+<html lang="en-us"> <!-- Sets the languade to US English -->
 
-<head>
-    <meta charset="UTF-8" />
+<head> <!-- Things not seen by the user, but necessary to the html for behind the scenes -->
+    <meta charset="UTF-8" /> <!-- Sets the character set -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="./assets/css/reset.css"> -->
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon</title>
+    <link rel="stylesheet" href="./assets/css/reset.css"> <!-- Links a CSS file to reset every element -->
+    <link rel="stylesheet" href="./assets/css/style.css"> <!-- Links a CSS file that we use to style the page -->
+    <title>Horiseon</title> <!-- A title seen on the browsers tab for the page -->
 </head>
 
-<body>
-    <header>
-        <h1>Hori<span class="seo">seo</span>n</h1>
-        <nav>
+<body> <!-- The part of the site the user sees -->
+    <header> <!-- The top most section of the page -->
+        <h1>Hori<span class="seo">seo</span>n</h1> <!-- Company logo -->
+        <nav> <!-- A clickable list of section the user can go to -->
             <ul>
                 <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
+                    <a href="#search-engine-optimization">Search Engine Optimization</a> <!-- The first main section a user can jump to by clicking the text -->
                 </li>
                 <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
+                    <a href="#online-reputation-management">Online Reputation Management</a> <!-- The second main section a user can jump to by clicking the text -->
                 </li>
                 <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
+                    <a href="#social-media-marketing">Social Media Marketing</a> <!-- The third main section a user can jump to by clicking the text -->
                 </li>
             </ul>
         </nav>
     </header>
 
-    <img class="coverPhoto" src="assets/images/digital-marketing-meeting.jpg" alt="hero team cover photo">
+    <img class="coverPhoto" src="assets/images/digital-marketing-meeting.jpg" alt="hero team cover photo"> <!-- Cover Photo -->
 
     <main>
-        <section id="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
-            <h2>Search Engine Optimization</h2>
-            <p>
+        <section id="search-engine-optimization"> <!-- First main section -->
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" /> <!-- Section image -->
+            <h2>Search Engine Optimization</h2> <!-- Section title -->
+            <p> <!-- Section paragraph -->
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
-        <section id="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
-            <h2>Online Reputation Management</h2>
-            <p>
+        <section id="online-reputation-management"> <!-- Second main section -->
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" /> <!-- Section image -->
+            <h2>Online Reputation Management</h2> <!-- Section title -->
+            <p> <!-- Section paragraph -->
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
-        <section id="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
-            <h2>Social Media Marketing</h2>
-            <p>
+        <section id="social-media-marketing"> <!-- Third main section -->
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" /> <!-- Section image -->
+            <h2>Social Media Marketing</h2> <!-- Section title -->
+            <p> <!-- Section paragraph -->
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </section>
     </main>
     <aside>
-        <section>
-            <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
-            <p>
+        <section> <!-- First side bar section -->
+            <h3>Lead Generation</h3> <!-- Section title -->
+            <img src="./assets/images/lead-generation.png" /> <!-- Section image -->
+            <p> <!-- Section paragraph -->
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
-        <section>
-            <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
-            <p>
+        <section> <!-- Second side bar section -->
+            <h3>Brand Awareness</h3> <!-- Section title -->
+            <img src="./assets/images/brand-awareness.png" /> <!-- Section image -->
+            <p> <!-- Section paragraph -->
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
-        <section>
-            <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
-            <p>
+        <section> <!-- Third side bar section -->
+            <h3>Cost Management</h3> <!-- Section title -->
+            <img src="./assets/images/cost-management.png"></img> <!-- Section image -->
+            <p> <!-- Section paragraph -->
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </section>
     </aside>
-    <footer>
-        <h2>Made with ❤️️ by Horiseon</h2>
-        <p>
+    <footer> <!-- Bottom most section (footer) -->
+        <h2>Made with ❤️️ by Horiseon</h2>  <!-- Footer title -->
+        <p> <!-- Footer copy write disclosure -->
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </footer>
