--- a/index.html
+++ b/index.html
@@ -31,21 +31,21 @@
 
     <main>
         <section id="search-engine-optimization"> <!-- First main section -->
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" /> <!-- Section image -->
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="search engine optimization with a computer, notebook, a cup of coffee, and other supplies"/> <!-- Section image -->
             <h2>Search Engine Optimization</h2> <!-- Section title -->
             <p> <!-- Section paragraph -->
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
         <section id="online-reputation-management"> <!-- Second main section -->
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" /> <!-- Section image -->
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="online reputation management with a person holding a phone at their computer"/> <!-- Section image -->
             <h2>Online Reputation Management</h2> <!-- Section title -->
             <p> <!-- Section paragraph -->
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
         <section id="social-media-marketing"> <!-- Third main section -->
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" /> <!-- Section image -->
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="social media marketing with a team working at a table"/> <!-- Section image -->
             <h2>Social Media Marketing</h2> <!-- Section title -->
             <p> <!-- Section paragraph -->
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -55,21 +55,21 @@
     <aside>
         <section> <!-- First side bar section -->
             <h3>Lead Generation</h3> <!-- Section title -->
-            <img src="./assets/images/lead-generation.png" /> <!-- Section image -->
+            <img src="./assets/images/lead-generation.png" alt="working gear that equates to money"/> <!-- Section image -->
             <p> <!-- Section paragraph -->
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
         <section> <!-- Second side bar section -->
             <h3>Brand Awareness</h3> <!-- Section title -->
-            <img src="./assets/images/brand-awareness.png" /> <!-- Section image -->
+            <img src="./assets/images/brand-awareness.png" alt="person with a lightbulb for their head"/> <!-- Section image -->
             <p> <!-- Section paragraph -->
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
         <section> <!-- Third side bar section -->
             <h3>Cost Management</h3> <!-- Section title -->
-            <img src="./assets/images/cost-management.png"></img> <!-- Section image -->
+            <img src="./assets/images/cost-management.png" alt="a gear with monetary symbols around it"></img> <!-- Section image -->
             <p> <!-- Section paragraph -->
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
